--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "test:duration:executor": "npx playwright test --config ./tests/playwright.config.ts -g @duration-executor",
     "test:iterations-per-second:executor": "npx playwright test --config ./tests/playwright.config.ts -g @iterations-per-second-executor",
     "test:variable-rate:executor": "npx playwright test --config ./tests/playwright.config.ts -g @variable-rate-executor"
-
   },
   "author": "Nick Vuono nicholas.vuono@gmail.com",
   "license": "Apache License 2.0",
   "devDependencies": {
     "@playwright/test": "^1.49.0",
     "@types/node": "^20.11.28",
+    "axios": "^1.7.9",
     "playwright": "^1.42.1",
     "prettier": "^3.2.5"
   }
