--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test:iterations:executor": "npx playwright test --config ./tests/playwright.config.ts -g @iterations-executor",
     "test:duration:executor": "npx playwright test --config ./tests/playwright.config.ts -g @duration-executor",
     "test:iterations-per-second:executor": "npx playwright test --config ./tests/playwright.config.ts -g @iterations-per-second-executor",
-    "test:variable-rate:executor": "npx playwright test --config ./tests/playwright.config.ts -g @variable-rate-executor"
+    "test:variable-rate:executor": "npx playwright test --config ./tests/playwright.config.ts -g @variable-rate-executor",
+    "test:all": "npx playwright test --config ./tests/playwright.config.ts --workers 1"
   },
   "author": "Nick Vuono nicholas.vuono@gmail.com",
   "license": "Apache License 2.0",
